# Agent-Balu

./: MANIFEST.in  Makefile  README.md  complete_install.sh  final_fix.sh  fixed_version_check.sh  install.bat  install.sh  pyproject.toml  quick_install.sh  remote_install.sh  setup.py  syntax_fix.sh  test_install.sh
ai_commit/: app.py  cli.py  commit_agent.py  email_agent.py  generate_llm_message.py  generate_remote_message.py  pr_agent_py  review_agent.py  utils.py
ai_commit/Agents/: base_agent.py  commit_agent.py
ai_commit/cli/: cli.py
ai_commit/core/: config.py  llm.py  utils.py
ai_commit/prompts/: code_review.txt  commit_message.txt
