[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai_commit"]


[tool.setuptools.package-data]
"ai_commit" = ["prompts/*.txt"]


[project]
name = "ai_commit"
version = "0.0.1"
description = "AI generated commit messages!"

dependencies = [
    "requests>=2.25.1",      
    "argparse",              
    "ollama==0.3.3",
    "SpeechRecognition"

]

[project.scripts]
AgentBalu = "ai_commit.cli:main"