[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-balu"
version = "0.1.0"
description = "AI-powered Git commit message generator and code assistant"
readme = "README.md"
authors = [
    {name = "Pranav Kandikonda", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "ollama>=0.4.0",
    "SpeechRecognition>=3.8.0",
    "argparse",
    "pandas",
    "chardet"
]

[project.optional-dependencies]
voice = ["PyAudio>=0.2.11"]

[project.urls]
"Homepage" = "https://github.com/prakan1684/Agent-Balu"
"Bug Tracker" = "https://github.com/prakan1684/Agent-Balu/issues"

[project.scripts]
ai-commit = "ai_commit.cli.cli:main"

[tool.setuptools]
packages = ["ai_commit"]
package-data = { "ai_commit" = ["prompts/*.txt"] }